--- a/src/pages/projects/polimeet.mdx
+++ b/src/pages/projects/polimeet.mdx
@@ -4,6 +4,7 @@ layout: "@layouts/blogLayout.astro"
 date: "2024-10-22"
 description: "We didn't expect this social experiment to go this far."
 tags: ["Bots", "Social Experiment"]
+thumbnail: "/assets/blog/polimeet/banner.png"
 published: true
 ---
 import CodeBlock from '@components/CodeBlock.astro';
@@ -20,11 +21,11 @@ import { Image } from 'astro:assets';
 
 ---
 
-![A version of the sticker we put in bathrooms.](@assets/blog/polimeet/banner.png)
+![A version of the sticker we put in bathrooms.](/assets/blog/polimeet/banner.png)
 
 Two years ago, a couple of friends and I from university decided to start PoliMeet. What began as a small side project evolved into something much bigger — a sort of anonymous dating app for our university campus. This is the story of how that happened.
 
-![The logo we used for the project.](@assets/blog/polimeet/logo32.jpg)
+![The logo we used for the project.](/assets/blog/polimeet/logo32.jpg)
 
 <Paragraph subtitle="The logo we used for the bot." />
 
@@ -34,7 +35,7 @@ The initial idea for PoliMeet came from a bot already existing on Telegram calle
 
 I thought, "Why not take this idea and adapt it specifically for our university campus?" The goal was to create a safer, more engaging environment than the existing bot, with a focus on fostering meaningful social interactions and friendships.
 
-![The greeting message (italian).](@assets/blog/polimeet/welcome.png)
+![The greeting message (italian).](/assets/blog/polimeet/welcome.png)
 
 ---
 
@@ -46,7 +47,7 @@ Users could access the bot and specify details like their gender, university cam
 
 Once in the main menu, you could click “join” to enter a pool and be randomly matched with another user. The matching was entirely random, although we had plans for a feature where you could specify preferences — unfortunately, we never got that far.
 
-![Getting matched.](@assets/blog/polimeet/match.png)
+![Getting matched.](/assets/blog/polimeet/match.png)
 
 ---
 
@@ -56,7 +57,7 @@ One of the standout features of our bot was the “Safety Report.” If at any p
 
 Other than these cases, all conversations remained anonymous. Messages weren’t stored on a server; instead, they were simply forwarded between users, so we didn’t need to worry about disk space or data privacy issues.
 
-![Reporting.](@assets/blog/polimeet/report.png)
+![Reporting.](/assets/blog/polimeet/report.png)
 
 ---
 
@@ -76,15 +77,15 @@ In hindsight, the setback helped. Since I already had a clear picture of what th
 
 When we were finally ready to launch, we decided to go all out with an advertising campaign. Anna, one of the team members, designed awesome flyers to be distributed around the campus. We placed them near vending machines, water dispensers, microwaves, bulletin boards — anywhere we thought students would notice.
 
-![The flyers.](@assets/blog/polimeet/micro2.png)
+![The flyers.](/assets/blog/polimeet/micro2.png)
 
 We also wanted to track which flyers were most effective. On Telegram, when you start a bot, it can read an "argument" in the URL. For example, if you use a link like **https://t.me/botfather?start=CODE_HERE** the bot can detect that specific code. We created different QR codes with unique arguments, like "micro5" for the microwaves in Building 5, or "bathrooms" for the stickers we put in restroom stalls. Jack was in charge of processing this data to see which locations were driving the most bot starts.
 
-![Data about where the user has started the bot from.](@assets/blog/polimeet/locations.jpg)
+![Data about where the user has started the bot from.](/assets/blog/polimeet/locations.jpg)
 
 I was not surprised that the most used flyer was the "bathroom" one.
 
-![Data about users of the bot.](@assets/blog/polimeet/course.jpg)
+![Data about users of the bot.](/assets/blog/polimeet/course.jpg)
 
 ---
 
