--- a/src/pages/projects/spyfall.mdx
+++ b/src/pages/projects/spyfall.mdx
@@ -5,7 +5,7 @@ date: "2024-09-07"
 description: "Creating a webapp for the social deduction game SpyFall."
 tags: ["Web Dev", "Game Dev"]
 published: true
-thumbnail: "/src/assets/blog/spyfall/left.png"
+thumbnail: "/assets/blog/spyfall/left.png"
 ---
 import CodeBlock from '@components/CodeBlock.astro';
 import Code from "@components/Code.astro";
@@ -21,11 +21,11 @@ import { Image } from 'astro:assets';
 
 Spyfall may not be a super popular game, but I find it incredibly fun. I first discovered it while watching some **Node** videos on YouTube, and I immediately fell in love with it. As a huge fan of social deduction games, Spyfall hit all the right notes for me. The premise is simple: everyone knows a specific location (chosen randomly through cards or an app)—everyone except for the spy. The goal is for players to ask each other subtle questions about the location to figure out who the spy is. The twist? The spy can win by correctly guessing the location before being discovered.
 
-![Node videos](@assets/blog/spyfall/node.png)
+![Node videos](/assets/blog/spyfall/node.png)
 
 I’ve played Spyfall online using some existing websites, but I wanted to create my own version. A couple of years ago, I made a **Telegram Bot** for it, ambitiously aiming to offer the game to everyone, not just my group of friends. It had features like lobby management and a full-fledged game system, but it never gained much traction—mainly because it was on Telegram. I always knew the platform choice would be an issue, but I was limited by my skills at the time.
 
-![The original TG bot I made](@assets/blog/spyfall/telegram2.png)
+![The original TG bot I made](/assets/blog/spyfall/telegram2.png)
 
 Now, with a better grasp of **React**, I decided to revisit this project and build a web-based version. It was the perfect opportunity to combine something I loved and a chance to test out my new skills. Plus, this time, I wanted to make some tweaks to the existing game formula.
 
@@ -37,17 +37,17 @@ In addition to basic Spyfall functionality, I wanted to improve the user experie
 
 **Clear List of Locations for the Spy:** It’s frustrating for the spy to ask, "What are the possible locations?" and immediately give themselves away. I wanted the spy to always have access to this information discreetly.
 
-![Gif assignation](@assets/blog/spyfall/loc.gif)
+![Gif assignation](/assets/blog/spyfall/loc.gif)
 
 **Voting System:** Inspired by **Among Us**, I envisioned a voting system where players could interactively cast votes on who they think the spy is.
 
-![Player and spy vote](@assets/blog/spyfall/vote.png)
+![Player and spy vote](/assets/blog/spyfall/vote.png)
 
 ## Backend Development with FastAPI
 
 I started by developing the backend using **FastAPI**. My initial task was to create the lobby system. Right now, you can ping an API endpoint, and the backend will generate a lobby for you, returning a unique string code that allows other players to join.
 
-![Backend confirmation of lobby creation](@assets/blog/spyfall/insomnia1.png)
+![Backend confirmation of lobby creation](/assets/blog/spyfall/insomnia1.png)
 
 For real-time communication, I had to learn **WebSockets**—a protocol I had studied but never used before. Rather than follow a tutorial, I built everything from scratch. Here’s how I approached it:
 
@@ -75,7 +75,7 @@ Handling corner cases was particularly tricky. For instance, I had to account fo
 
 3. Players spam API requests to create lobbies without joining (I added an expiration timer to clean up empty lobbies).
 
-![Everyone left screen](@assets/blog/spyfall/left.png)
+![Everyone left screen](/assets/blog/spyfall/left.png)
 
 ## Final Features
 
@@ -83,7 +83,7 @@ One feature I planned to implement is **duplicate name detection**. Before, if t
 
 Additionally, I’m working on improving the **joining system**. Currently, the system directly creates a WebSocket connection when joining a lobby. If the connection fails, it throws an error without providing details like "lobby full" or "game already started." My new approach will poll an endpoint first, verify lobby details, and then create the WebSocket connection based on that information.
 
-![Lobby not found](@assets/blog/spyfall/lobbynotfound.png)
+![Lobby not found](/assets/blog/spyfall/lobbynotfound.png)
 
 Finally, I forgot to strip players’ roles in the lobby update message. While I removed the spy’s identity, I left the player roles visible, which allows savvy players to deduce who the spy is. My fix was to only include the role of the player receiving the message, ensuring that no one can peek into others' roles.
 
